# zmk-header-check

./: .pre-commit-hooks.yaml  LICENSE  setup.cfg
header_check/: header_check.py
