[metadata]
name = zmk_header_check
version = 1.0.0
description = Simple to check license headers
url = https://github.com/e11i0t23/zmk-header-check
author = Elliot Powell
license = MIT
license_file = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy

[options]
python_requires = >=3.6.1

[options.entry_points]
console_scripts =
    header-check = header_check.header_check:main

